Fixed nav bar formatting and shrinking issues. Configured nav bar collapse to use methods instead of data-target, data-toggle, etc. Configured scales tab to generate picture with defaults on page load. Added more to gitignore.

--- a/GuitarHelperWebsite/ClientApp/src/app/nav-menu/nav-menu.component.less
+++ b/GuitarHelperWebsite/ClientApp/src/app/nav-menu/nav-menu.component.less
@@ -3,6 +3,7 @@
   left: 0;
   right: 0;
   z-index: 1;
+  width: 100%;
 
   li {
     a {
@@ -24,45 +25,29 @@
   }
 }
 
-.inline {
-  display: inline-block;
-}
-
-@media (min-width: 768px) {
+@media (min-width: 200px) {
   .main-nav {
-    width: 100%;
-    min-width: 200px;
 
     .navbar {
-      border-radius: 0 15px 15px 0;
       border-width: 0px;
       height: 100%;
-
-      a {
-        width: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-
-      ul {
-        float: none;
-      }
+      width: 100%;
 
       li {
-        float: none;
         font-size: 15px;
-        margin: 6px;
+        margin: 0px;
 
         a {
-          padding: 10px 16px;
+          padding: 6px 16px;
           border-radius: 4px;
         }
       }
     }
 
-    .navbar-header {
-      float: none;
+    .navbar-brand {
+      padding: 4px;
+      //width: 100%;
+      //float: none;
     }
 
     .navbar-collapse {
